<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:text="@string/title_name1"
        android:textColor="@color/orange"
        android:textSize="40sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_green"
        android:hint="Поле для редактирования текста"
        android:inputType="text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/title_name2"
        android:textSize="40sp" />
</LinearLayout>