<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="170dp"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clock"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/title_name1"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="200dp"
        android:layout_height="320dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView">

        <Button
            android:id="@+id/toListFragment"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/listview"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/toRecyclerFragment"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/recyclerview"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>